# lisa-autoresearch

./: .gitignore  CHANGELOG.md  CITATION.cff  CITATIONS.md  CONTRIBUTING.md  DISK_OFFLOAD_TRAINING.md  Dockerfile  FEDERATED_TEST_PROGRESS.md  GITHUB_SETUP.md  INTEGRATION.md  INTEGRATION_SUMMARY.md  LICENSE  LISA_32B_BENCHMARKS.md  LISA_32B_PRODUCTION.md  LISA_70B_RESULTS.md  LISA_INFERENCE.md  OFFLOAD_EXPERIMENTS.md  OPTIMIZATION_ROADMAP.md  PROGRESS_REPORT_2026-04-01.md  README.md  REORGANIZATION_PLAN.md  SECURITY_MODEL.md  TECHNICAL_REPORT.md  TEST_RESULTS_COMPREHENSIVE.md  __init__.py  autoresearch_best.tsv  client_minimal.py  config.yaml  cron_lisa_lcsb.sh  dashboard.py  debug6.py  docker-compose.yml  eval_generation.py  eval_model.py  eval_perplexity.py  eval_ppl_proper.py  example_data.jsonl  fed_client.py  federated_lisa.py  federated_pool.py  (+32 more)
.github/: bug_report.md  feature_request.md  pull_request_template.md
.github/workflows/: ci.yml  lint.yml
api/: __init__.py  async_io.py  async_updates.py  server.py
config/: README.md  default.yaml
distributed/: __init__.py  continuous.py  discovery.py  host.py  p2p.py
docs/: 32B_TRAINING.md  JETSON_GPU_ISSUES.md  compensation-agreement-draft.md  getting-started.md  healthcare-model-guide.md  healthcare-product-brief.md  use-case-infectious-disease.md  use-case-oncology.md
eval/: autora.py  byzantine_stress_test.py  dashboard.py  fed_config.py  fedavg_vs_lisafedavg.py  program.md
federated/: __init__.py  accumulation.py  advanced.py  byzantine.py  client.py  compression.py  data.py  healthcare.py  join_server.py  learning.py  mining.py  p2p.py  server.py
inference/: __init__.py  engine.py  parallel.py  quantize.py
jetson_scripts/: train_scaled.py
lisa/: __init__.py  auto_tuner.py  device_profiler.py  hardware.py  lisa_mlx.py  lisa_offload.py  lisa_selective.py  offload.py  offload_torch.py  runtime_optimizer.py  train_32b_lisa.py  train_lisa_selective.py  train_qwen7b.py  train_torch.py  trainer.py
lisa_agent/: README.md  agent.py
lisa_lcsb/: 14b_lisa_lcsb_fullcpu.py  lisa_lcsb_jetson.py  train_7b_lisa_lcsb.py  train_7b_lisa_lcsb_cpu.py
lisa_pkg/: README.md  USAGE_GUIDE.md  setup.py
lisa_pkg/archives/: lisa_32b_layer_by_layer.py  lisa_32b_poc.py  lisa_32b_production.py  lisa_32b_realdata.py  lisa_production_32b.py  lisa_production_full.py  lisa_qlora_lcsb_offload_poc.py  train_14b_simple.py  train_32b_qlora.py  train_32b_sequential.py  (+1 more)
scripts/: continuous_train.py  generate_audit_report.py  mac_train_client.py  robust_client.py
tests/: __init__.py  test_32b_training.py  test_compression_stress.py  test_core.py  test_disk_offload.py  test_qwen3b.py  test_streaming_gradients.py  test_v1_2_features.py
utils/: __init__.py  audit_logger.py  benchmark.py  checkpoint_manager.py  desktop_launcher.py  distributed_experiment.py  mixed_precision.py  prepare_data.py  production.py  selective.py
(+18 files in other folders)
