[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lisa-autoresearch"
version = "1.0.0"
description = "Train large language models on limited hardware using disk offloading"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LISA + AutoResearch Contributors"}
]
keywords = [
    "llm",
    "training",
    "memory-efficient",
    "disk-offload",
    "mlx",
    "qwen"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "mlx>=0.15.0",
    "mlx-lm>=0.19.0",
    "transformers>=4.40.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/CiphemonJY/lisa-autoresearch"
Documentation = "https://github.com/CiphemonJY/lisa-autoresearch#readme"
Repository = "https://github.com/CiphemonJY/lisa-autoresearch.git"
Issues = "https://github.com/CiphemonJY/lisa-autoresearch/issues"

[project.scripts]
lisa-train = "lisa_autoresearch.train:main"
lisa-offload = "lisa_autoresearch.disk_offload:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lisa_autoresearch*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]