[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LISA_FTM"
version = "0.1.0"
description = "Train AI together — any device, any hardware. Federated fine-tuning with LISA layer selection and LoRA adapters."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LISA FTM Contributors"}
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "huggingface_hub>=0.19.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
lisa-federated = "federated.server:main"
lisa-client = "fed_client:main"
lisa-train = "main:main"

[tool.setuptools]
py-modules = ["fed_client", "main"]
packages = ["federated", "lisa", "utils", "api"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
